--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Мишка</title>
+</head>
 
-  </body>
+<body classn="page-index">
+  <header class="page-header">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Мишка">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Вязание на заказ</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">Поиск по сайту</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">Корзина: пока пуста</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="page-main">
+
+    <section class="hero">
+      <h1 class="hero__title">Милые штуки ручной работы для дома</h1>
+    </section>
+
+    <section class="product-categories">
+
+      <h2 class="visually-hidden">Категории товаров</h2>
+
+      <ul class="product-categories__list">
+        <li class="product-categories__item"><a href="#">Предметы интерьера</a></li>
+        <li class="product-categories__item"><a href="#">Детские игрушки</a></li>
+      </ul>
+
+    </section>
+
+    <section class="products">
+
+      <h2 class="visually-hidden">Список товаров</h2>
+
+      <ul class="products-list">
+
+        <li class="products-list__item product-card">
+          <h3 class="product-card__title">
+            Вязаные корзинки
+          </h3>
+          <small class="product-card__subtitle">Товар недели</small>
+
+          <p class="product-card__description">
+            Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+          </p>
+
+          <table class="product-card__characteristics product-characteristics">
+            <tr>
+              <td class="product-characteristics__title">
+                Цвет:
+              </td>
+              <td class="product-characteristics__value">
+                «Тиффани»/серый
+              </td>
+            </tr>
+            <tr>
+              <td class="product-characteristics__title">
+                Диаметр:
+              </td>
+              <td class="product-characteristics__value">
+                25 см
+              </td>
+            </tr>
+            <tr>
+              <td class="product-characteristics__title">
+                Высота:
+              </td>
+              <td class="product-characteristics__value">
+                15 см
+              </td>
+            </tr>
+          </table>
+
+          <div class="product-card__image-wrapper">
+            <img src="" alt="" class="product-card__image">
+          </div>
+
+          <span class="product-card__price">
+            Цена: 990 руб.
+          </span>
+
+          <a class="product-card__buy" href="#">Заказать</a>
+
+        </li>
+      </ul>
+
+      <section class="features">
+
+        <h2 class="features__title">
+          Коротко о нас:
+        </h2>
+
+        <ul class="features__list">
+          <li class="features__item features__item--eco">Экологически чистые материалы</li>
+          <li class="features__item features__item--scandinavian">Скандинавский стиль по российской цене</li>
+          <li class="features__item features__item--likes">Увеличивает лайки на фотографиях</li>
+          <li class="features__item features__item--handmade">Связано вручную с любовью и умилением</li>
+          <li class="features__item features__item--local-support">Поддержка отечественного производителя</li>
+          <li class="features__item features__item--packing">Поставляется в подарочной упаковке</li>
+
+        </ul>
+
+      </section>
+
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__title">Отзывы</h2>
+
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item slider__item">
+              <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
+                количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+
+              <span class="reviews__author">Анастасия Красильникова</span>
+              <p class="reviews__username"><a href="#">@misssssiskras</a></p>
+
+            </li>
+            <li class="reviews__item slider__item">
+              <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
+                количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+
+              <span class="reviews__author">Анастасия Красильникова</span>
+              <p class="reviews__username"><a href="#">@misssssiskras</a></p>
+
+            </li>
+            <li class="reviews__item slider__item">
+              <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
+                количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+
+              <span class="reviews__author">Анастасия Красильникова</span>
+              <p class="reviews__username"><a href="#">@misssssiskras</a></p>
+
+            </li>
+          </ul>
+        </div>
+      </section>
+    </section>
+  </main>
+</body>
+
 </html>
