--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@
           <h3 class="product-card__title">
             Вязаные корзинки
           </h3>
-          <small class="product-card__subtitle">Товар недели</small>
+          <b class="product-card__subtitle">Товар недели</b>
 
           <p class="product-card__description">
             Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
@@ -98,7 +98,7 @@
             Цена: 990 руб.
           </span>
 
-          <a class="product-card__buy" href="#">Заказать</a>
+          <a class="product-card__buy button" href="#">Заказать</a>
 
         </li>
       </ul>
@@ -158,6 +158,29 @@
       </section>
     </section>
   </main>
+
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
+              Инстаграме</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
