source:/ index, form, catalog.html: правки по ревью

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,37 +41,40 @@
 
       <ul class="products-list">
 
-        <li class="products-list__item product-card">ё
+        <li class="products-list__item product-card">
 
+          <img src="https://via.placeholder.com/260x195" alt="" class="product-card__image">
           <h3 class="product-card__title">Зайчик-попрыгайчик</h3>
 
           <small class="product-card__size">Рост 30 см, вес 200 г</small>
 
-          <div class="product-card__footr">
+          <div class="product-card__footer">
             <b class="product-card__price">1 200 руб.</b>
             <a class="product-card__cart" href="#">Добавить в корзину</a>
           </div>
         </li>
 
-        <li class="products-list__item product-card">ё
+        <li class="products-list__item product-card">
 
+          <img src="https://via.placeholder.com/260x195" alt="" class="product-card__image">
           <h3 class="product-card__title">Корзинка для белья</h3>
 
           <small class="product-card__size">Диаметр 15 см, высота 10 см</small>
 
-          <div class="product-card__footr">
+          <div class="product-card__footer">
             <b class="product-card__price">690 руб.</b>
             <a class="product-card__cart" href="#">Добавить в корзину</a>
           </div>
         </li>
 
-        <li class="products-list__item product-card">ё
+        <li class="products-list__item product-card">
 
+          <img src="https://via.placeholder.com/260x195" alt="" class="product-card__image">
           <h3 class="product-card__title">Большая корзинка для игрушек</h3>
 
           <small class="product-card__size">Диаметр 30 см, высота 30 см</small>
 
-          <div class="product-card__footr">
+          <div class="product-card__footer">
             <b class="product-card__price">1 500 руб.</b>
             <a class="product-card__cart" href="#">Добавить в корзину</a>
           </div>
@@ -82,25 +85,28 @@
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
-              Инстаграме</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+            Мы в Инстаграме
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+            Мы в Фейсбуке
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">
+            Мы в Твиттере
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано</b>
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 </body>
