--- a/source/index.html
+++ b/source/index.html
@@ -28,157 +28,141 @@
         </li>
       </ul>
     </nav>
+
+    <h1 class="page-header__title">Милые штуки ручной работы для дома</h1>
+
+    <ul class="page-header__categories categories">
+      <li class="categories__item"><a href="#">Предметы интерьера</a></li>
+      <li class="categories__item"><a href="#">Детские игрушки</a></li>
+    </ul>
   </header>
 
   <main class="page-main">
+    <article class="product-of-week">
+      <h2 class="product-of-week__title">
+        Вязаные корзинки
+      </h2>
+      <b class="product-of-week__subtitle">Товар недели</b>
+      <p class="product-of-week__description">
+        Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+      </p>
+      <table class="product-of-week__characteristics product-characteristics">
+        <tr>
+          <td class="product-characteristics__title">
+            Цвет:
+          </td>
+          <td class="product-characteristics__value">
+            «Тиффани»/серый
+          </td>
+        </tr>
+        <tr>
+          <td class="product-characteristics__title">
+            Диаметр:
+          </td>
+          <td class="product-characteristics__value">
+            25 см
+          </td>
+        </tr>
+        <tr>
+          <td class="product-characteristics__title">
+            Высота:
+          </td>
+          <td class="product-characteristics__value">
+            15 см
+          </td>
+        </tr>
+      </table>
+      <div class="product-of-week__image-wrapper">
+        <img src="https://via.placeholder.com/260x315" alt="Товар недели" class="product-of-week__image">
+      </div>
+      <span class="product-of-week__price">
+        Цена: 990 руб.
+      </span>
+      <a class="product-of-week__buy button" href="#">Заказать</a>
+    </article>
 
-    <section class="hero">
-      <h1 class="hero__title">Милые штуки ручной работы для дома</h1>
-    </section>
+    <section class="features">
 
-    <section class="product-categories">
+      <h2 class="features__title">
+        Коротко о нас:
+      </h2>
 
-      <h2 class="visually-hidden">Категории товаров</h2>
+      <ul class="features__list">
+        <li class="features__item features__item--eco">Экологически чистые материалы</li>
+        <li class="features__item features__item--scandinavian">Скандинавский стиль по российской цене</li>
+        <li class="features__item features__item--likes">Увеличивает лайки на фотографиях</li>
+        <li class="features__item features__item--handmade">Связано вручную с любовью и умилением</li>
+        <li class="features__item features__item--local-support">Поддержка отечественного производителя</li>
+        <li class="features__item features__item--packing">Поставляется в подарочной упаковке</li>
 
-      <ul class="product-categories__list">
-        <li class="product-categories__item"><a href="#">Предметы интерьера</a></li>
-        <li class="product-categories__item"><a href="#">Детские игрушки</a></li>
       </ul>
 
     </section>
 
-    <section class="products">
+    <section class="reviews">
+      <div class="reviews__wrapper slider">
+        <h2 class="reviews__title">Отзывы</h2>
 
-      <h2 class="visually-hidden">Список товаров</h2>
+        <ul class="reviews__list slider__list">
+          <li class="reviews__item slider__item">
+            <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
+              количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
-      <ul class="products-list">
+            <span class="reviews__author">Анастасия Красильникова</span>
+            <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
-        <li class="products-list__item product-card">
-          <h3 class="product-card__title">
-            Вязаные корзинки
-          </h3>
-          <b class="product-card__subtitle">Товар недели</b>
+          </li>
+          <li class="reviews__item slider__item">
+            <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
+              количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
-          <p class="product-card__description">
-            Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
-          </p>
+            <span class="reviews__author">Анастасия Красильникова</span>
+            <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
-          <table class="product-card__characteristics product-characteristics">
-            <tr>
-              <td class="product-characteristics__title">
-                Цвет:
-              </td>
-              <td class="product-characteristics__value">
-                «Тиффани»/серый
-              </td>
-            </tr>
-            <tr>
-              <td class="product-characteristics__title">
-                Диаметр:
-              </td>
-              <td class="product-characteristics__value">
-                25 см
-              </td>
-            </tr>
-            <tr>
-              <td class="product-characteristics__title">
-                Высота:
-              </td>
-              <td class="product-characteristics__value">
-                15 см
-              </td>
-            </tr>
-          </table>
+          </li>
+          <li class="reviews__item slider__item">
+            <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
+              количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
-          <div class="product-card__image-wrapper">
-            <img src="" alt="" class="product-card__image">
-          </div>
+            <span class="reviews__author">Анастасия Красильникова</span>
+            <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
-          <span class="product-card__price">
-            Цена: 990 руб.
-          </span>
+          </li>
 
-          <a class="product-card__buy button" href="#">Заказать</a>
-
-        </li>
-      </ul>
-
-      <section class="features">
-
-        <h2 class="features__title">
-          Коротко о нас:
-        </h2>
-
-        <ul class="features__list">
-          <li class="features__item features__item--eco">Экологически чистые материалы</li>
-          <li class="features__item features__item--scandinavian">Скандинавский стиль по российской цене</li>
-          <li class="features__item features__item--likes">Увеличивает лайки на фотографиях</li>
-          <li class="features__item features__item--handmade">Связано вручную с любовью и умилением</li>
-          <li class="features__item features__item--local-support">Поддержка отечественного производителя</li>
-          <li class="features__item features__item--packing">Поставляется в подарочной упаковке</li>
-
+          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+          <button class="reviews__next" type="button">Следующий отзыв</button>
         </ul>
-
-      </section>
-
-      <section class="reviews">
-        <div class="reviews__wrapper slider">
-          <h2 class="reviews__title">Отзывы</h2>
-
-          <ul class="reviews__list slider__list">
-            <li class="reviews__item slider__item">
-              <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
-                количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
-                и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-
-              <span class="reviews__author">Анастасия Красильникова</span>
-              <p class="reviews__username"><a href="#">@misssssiskras</a></p>
-
-            </li>
-            <li class="reviews__item slider__item">
-              <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
-                количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
-                и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-
-              <span class="reviews__author">Анастасия Красильникова</span>
-              <p class="reviews__username"><a href="#">@misssssiskras</a></p>
-
-            </li>
-            <li class="reviews__item slider__item">
-              <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
-                количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
-                и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-
-              <span class="reviews__author">Анастасия Красильникова</span>
-              <p class="reviews__username"><a href="#">@misssssiskras</a></p>
-
-            </li>
-          </ul>
-        </div>
-      </section>
+      </div>
+    </section>
     </section>
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
-              Инстаграме</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">Мы в Твиттере</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+            Мы в Инстаграме
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+            Мы в Фейсбуке
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">
+            Мы в Твиттере
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано</b>
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 </body>
