--- a/source/index.html
+++ b/source/index.html
@@ -135,12 +135,43 @@
           <button class="reviews__prev" type="button">Предыдущий отзыв</button>
           <button class="reviews__next" type="button">Следующий отзыв</button>
         </ul>
+        <a href="#" class="reviews__write button">Написать</a>
       </div>
-    </section>
     </section>
   </main>
 
   <footer class="page-footer">
+
+    <div class="page-footer__contacts contacts">
+      <b class="contacts__title">Контакты</b>
+
+      <table class="contacts__table">
+        <tr>
+          <td class="contacts__text">e-mail:</td>
+          <td class="contacts__value">
+            <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="contacts__text">адрес:</td>
+          <td class="contacts__value">
+            г. Санкт-Петербург,<br />
+            ул. Большая Конюшенная,<br />
+            д. 19/8, офис 101<br />
+          </td>
+        </tr>
+      </table>
+
+      <div class="contacts__map">
+        <iframe class="contacts__iframe-map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6058505727422!2d30.32335806116341!3d59.93868224659151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x62740c0ffcd8a91f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsIDEwMSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MTE4Ng!5e0!3m2!1sru!2sru!4v1573594915893!5m2!1sru!2sru"
+          width="100%" height="457" style="border:0" allowfullscreen="">
+        </iframe>
+      </div>
+
+      <a href="#" class="contacts__write-us button">Напишите нам</a>
+    </div>
+
     <div class="page-footer__social social">
       <ul class="social__list">
         <li class="social__item">
@@ -154,7 +185,7 @@
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--twitter" href="https://vk.com/htmlacademy">
+          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
             Мы в Твиттере
           </a>
         </li>
