правки по ревью form, catalog.html: небольшой рефакторинг по неймингу

--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <h1 class="hero__title">Вязание на заказ</h1>
+    <h1 class="page-header__title">Вязание на заказ</h1>
   </header>
 
   <main>
@@ -62,7 +62,7 @@
         <label for="hitachi">Оранжевый</label>
       </fieldset>
 
-      <fieldset class="order-form__fieldset fieldset-fio">
+      <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">ФИО</legend>
         <div class="order-form__input-wrapper">
           <label for="name">Имя:</label>
@@ -78,17 +78,17 @@
         </div>
       </fieldset>
 
-      <fieldset class="order-form__fieldset fieldset-tel">
+      <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Тел</legend>
         <input placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" id="phone" name="phone">
       </fieldset>
 
-      <fieldset class="order-form__fieldset fieldset-email">
+      <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">E-mail</legend>
         <input placeholder="Ваш Email*" type="text" name="email" id="email">
       </fieldset>
 
-      <fieldset class="order-form__fieldset fieldset-comment">
+      <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Доп</legend>
         <textarea placeholder="Опишите все ваши
         пожелания к заказу" name="comment"></textarea>
