form.html: убрано именование лишних fieldset-блоков

--- a/source/form.html
+++ b/source/form.html
@@ -37,7 +37,7 @@
 
     <form action="https://echo.htmlacademy.ru" method="post" class="order-form">
 
-      <fieldset class="order-form__fieldset fieldset-type">
+      <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Тип</legend>
         <input value="Аксессуар для интерьера" type="radio" name="type" id="accessories" checked>
         <label for="accessories">Аксессуар для интерьера</label>
@@ -46,7 +46,7 @@
       </fieldset>
 
 
-      <fieldset class="order-form__fieldset fieldset-color">
+      <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Цвет</legend>
         <input type="checkbox" name="color" value="Белый" id="white" checked>
         <label for="bosch">Белый</label>
