правки по ревью: form, catalog.html: вернул заголовки h1

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
 
-
+    <h1 class="page-header__title">Каталог товаров</h1>
   </header>
 
   <main class="page-main page-main--catalog">
