--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <h1 class="hero__title">Вязание на заказ</h1>
+    <h1 class="page-form__title">Вязание на заказ</h1>
   </header>
 
   <main>
