source/sass: файлы стилей для блоков

--- a/source/form.html
+++ b/source/form.html
@@ -7,9 +7,9 @@
 </head>
 
 <body class="page-form">
-  <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="https://via.placeholder.com/86x35" width="86" height="35" alt="Мишка">
+  <header class="header">
+    <a class="header__logo">
+      <img class="header__logo-image" src="https://via.placeholder.com/86x35" width="86" height="35" alt="Мишка">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <h1 class="page-header__title">Вязание на заказ</h1>
+    <h1 class="header__title">Вязание на заказ</h1>
   </header>
 
   <main>
@@ -49,17 +49,17 @@
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Цвет</legend>
         <input type="checkbox" name="color" value="Белый" id="white" checked>
-        <label for="bosch">Белый</label>
+        <label for="white">Белый</label>
         <input type="checkbox" name="color" value="Серый" id="gray" checked>
-        <label for="interskol">Серый</label>
+        <label for="gray">Серый</label>
         <input type="checkbox" name="color" value="«Тиффани»" id="tiffany">
-        <label for="makita">«Тиффани»</label>
+        <label for="tiffany">«Тиффани»</label>
         <input type="checkbox" name="color" value="Черный" id="black">
-        <label for="dewalt">Черный</label>
+        <label for="black">Черный</label>
         <input type="checkbox" name="color" value="Розовый" id="pink">
-        <label for="hitachi">Розовый</label>
+        <label for="pink">Розовый</label>
         <input type="checkbox" name="color" value="Оранжевый" id="orange">
-        <label for="hitachi">Оранжевый</label>
+        <label for="orange">Оранжевый</label>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
@@ -104,8 +104,8 @@
 
   </main>
 
-  <footer class="page-footer">
-    <div class="page-footer__social social">
+  <footer class="footer">
+    <div class="footer__social social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
@@ -124,7 +124,7 @@
         </li>
       </ul>
     </div>
-    <div class="page-footer__copyright copyright">
+    <div class="footer__copyright copyright">
       <b class="copyright__text">Разработано</b>
       <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
