--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,10 +8,10 @@
 
 <body class="page-catalog">
 
-  <header class="page-header">
+  <header class="header">
 
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="https://via.placeholder.com/86x35" width="86" height="35" alt="Мишка">
+    <a class="header__logo">
+      <img class="header__logo-image" src="https://via.placeholder.com/86x35" width="86" height="35" alt="Мишка">
     </a>
 
     <nav class="main-nav">
@@ -32,10 +32,10 @@
       </ul>
     </nav>
 
-    <h1 class="page-header__title">Каталог товаров</h1>
+    <h1 class="header__title">Каталог товаров</h1>
   </header>
 
-  <main class="page-main page-main--catalog">
+  <main class="main main--catalog">
 
     <section class="products">
 
@@ -95,8 +95,8 @@
     </article>
   </main>
 
-  <footer class="page-footer">
-    <div class="page-footer__social social">
+  <footer class="footer">
+    <div class="footer__social social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
@@ -115,7 +115,7 @@
         </li>
       </ul>
     </div>
-    <div class="page-footer__copyright copyright">
+    <div class="footer__copyright copyright">
       <b class="copyright__text">Разработано</b>
       <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
