верстка блоков index.html / WIP

--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>HTML Academy: Мишка</title>
 
   <link rel="stylesheet" href="./css/style.css">
@@ -79,7 +81,7 @@
         </tr>
       </table>
       <div class="product-of-week__image-wrapper">
-        <img src="https://via.placeholder.com/260x315" alt="Товар недели" class="product-of-week__image">
+        <img src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели" class="product-of-week__image">
       </div>
       <span class="product-of-week__price">
         Цена: 990 руб.
@@ -155,7 +157,7 @@
         <tr>
           <td class="contacts__text">e-mail:</td>
           <td class="contacts__value">
-            <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+            <a class="contacts__link contacts__value--email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
           </td>
         </tr>
         <tr>
