catalog.html, form.html: закончил mobile верстку

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
       <span class="product-of-week__price">
         Цена: 990 руб.
       </span>
-      <a class="product-of-week__buy button" href="#">Заказать</a>
+      <a class="product-of-week__buy button" href="form.html">Заказать</a>
     </article>
 
     <section class="features">
