правки по кодревью

--- a/source/index.html
+++ b/source/index.html
@@ -38,8 +38,12 @@
     <h1 class="header__title header__title--hero">Милые штуки <br />ручной<br />работы для дома</h1>
 
     <ul class="header__categories categories">
-      <li class="categories__item"><a href="#">Предметы интерьера</a></li>
-      <li class="categories__item"><a href="#">Детские игрушки</a></li>
+      <li class="categories__item">
+        <a href="#">Предметы интерьера</a>
+      </li>
+      <li class="categories__item">
+        <a href="#">Детские игрушки</a>
+      </li>
     </ul>
   </header>
 
