index, catalog: - закончил mobile вертску недостающих блоков

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -109,7 +109,7 @@
       <h2 class="how-its-done__title">Процесс производства</h2>
 
       <div class="how-its-done__image-wrapper">
-        <img class="how-its-done__image" src="./img/video-mobile@1x.jpg" alt="Процесс производства">
+        <img class="how-its-done__image" width="260" src="./img/video-mobile@1x.jpg" alt="Процесс производства">
       </div>
 
       <p class="how-its-done__description">
