--- a/source/index.html
+++ b/source/index.html
@@ -142,11 +142,13 @@
             <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
           </li>
-
-          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-          <button class="reviews__next" type="button">Следующий отзыв</button>
         </ul>
-        <a href="#" class="reviews__write button">Написать</a>
+
+        <div class="reviews__controls">
+          <button class="reviews__control reviews__control--left" type="button">Предыдущий отзыв</button>
+          <button class="reviews__control reviews__control--right" type="button">Следующий отзыв</button>
+        </div>
+        <a href="#" class="reviews__write button button--center">Написать</a>
       </div>
     </section>
     <section class="contacts">
@@ -177,7 +179,7 @@
         </iframe>
       </div>
 
-      <a href="#" class="contacts__write-us button">Напишите нам</a>
+      <a href="#" class="contacts__write-us button button--center">Напишите нам</a>
     </section>
   </main>
 
