--- a/source/index.html
+++ b/source/index.html
@@ -11,27 +11,42 @@
 </head>
 
 <body class="page-index">
+
   <header class="header header--hero">
     <div class="header__nav-wrapper">
-      <a class="header__logo">
-        <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
-      </a>
-      <nav class="main-nav">
+      <nav class="header__nav main-nav">
+        <a class="main-nav__item main-nav__item--logo header__logo">
+          <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+        </a>
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
+        <ul class="main-nav__list main-nav__list main-nav__list--catalog-form">
+          <li class="main-nav__item main-nav__item--small">
             <a href="catalog.html">Каталог товаров</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav__item main-nav__item--small">
             <a href="form.html">Вязание на заказ</a>
           </li>
-          <li class="site-list__item">
+        </ul>
+        <ul class="main-nav__list main-nav__list--search-checkout">
+          <li class="main-nav__item">
             <a href="#">Поиск по сайту</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav__item">
             <a href="#">Корзина: пока пуста</a>
           </li>
         </ul>
+        <ul class="main-nav__list main-nav__list--arrivals-sale">
+          <li class="main-nav__item">
+            <a href="#">Новые поступления</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="">Распродажа</a>
+          </li>
+        </ul>
+        <span class="main-nav__item main-nav__item--small main-nav__item--free-shipping">
+          Бесплатная доставка по России
+        </span>
+
       </nav>
     </div>
 
