- categories: tablet + desktop

--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
       <li class="categories__item">
         <a href="#">Предметы интерьера</a>
       </li>
-      <li class="categories__item">
+      <li class="categories__item categories__item--dark">
         <a href="#">Детские игрушки</a>
       </li>
     </ul>
