- main-nav, header: desktop версия

--- a/source/index.html
+++ b/source/index.html
@@ -20,10 +20,10 @@
         </a>
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list main-nav__list main-nav__list--catalog-form">
-          <li class="main-nav__item main-nav__item--small">
+          <li class="main-nav__item">
             <a href="catalog.html">Каталог товаров</a>
           </li>
-          <li class="main-nav__item main-nav__item--small">
+          <li class="main-nav__item">
             <a href="form.html">Вязание на заказ</a>
           </li>
         </ul>
@@ -43,7 +43,7 @@
             <a href="">Распродажа</a>
           </li>
         </ul>
-        <span class="main-nav__item main-nav__item--small main-nav__item--free-shipping">
+        <span class="main-nav__item main-nav__item--free-shipping">
           Бесплатная доставка по России
         </span>
 
