product-of-week: WIP

--- a/source/index.html
+++ b/source/index.html
@@ -64,10 +64,12 @@
 
   <main class="main">
     <article class="product-of-week">
-      <h2 class="product-of-week__title">
-        Вязаные корзинки
-      </h2>
-      <b class="product-of-week__subtitle">Товар недели</b>
+      <div class="product-of-week__titles">
+        <h2 class="product-of-week__title">
+          Вязаные корзинки
+        </h2>
+        <b class="product-of-week__subtitle">Товар недели</b>
+      </div>
       <p class="product-of-week__description">
         Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
       </p>
