catalog/how-its-done: WIP

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -133,7 +133,9 @@
         По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
       </p>
 
-      <a class="how-its-done__order button" href="#">Сделать заказ</a>
+      <div class="how-its-done__button-wrapper">
+        <a class="how-its-done__order button" href="#">Сделать заказ</a>
+      </div>
 
     </article>
   </main>
