index.html: refactor

--- a/source/index.html
+++ b/source/index.html
@@ -13,53 +13,54 @@
 <body class="page-index">
 
   <header class="header header--hero">
-    <div class="header__nav-wrapper">
-      <nav class="header__nav main-nav">
-        <a class="main-nav__item main-nav__item--logo header__logo">
-          <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
-        </a>
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <ul class="main-nav__list main-nav__list main-nav__list--catalog-form">
-          <li class="main-nav__item">
-            <a href="catalog.html">Каталог товаров</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html">Вязание на заказ</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list main-nav__list--search-checkout">
-          <li class="main-nav__item">
-            <a href="#">Поиск по сайту</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#">Корзина: пока пуста</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list main-nav__list--arrivals-sale">
-          <li class="main-nav__item">
-            <a href="#">Новые поступления</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Распродажа</a>
-          </li>
-        </ul>
-        <span class="main-nav__item main-nav__item--free-shipping">
-          Бесплатная доставка по России
-        </span>
-
-      </nav>
+    <div class="main-nav">
+      <a class="main-nav__logo header__logo">
+        <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+      </a>
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list main-nav__list main-nav__list--catalog-form">
+        <li class="main-nav__item">
+          <a href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="form.html">Вязание на заказ</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list main-nav__list--search-checkout">
+        <li class="main-nav__item">
+          <a href="#">Поиск по сайту</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="#">Корзина: пока пуста</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list main-nav__list--arrivals-sale">
+        <li class="main-nav__item">
+          <a href="#">Новые поступления</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="">Распродажа</a>
+        </li>
+      </ul>
+      <span class="main-nav__item main-nav__item--free-shipping">
+        Бесплатная доставка по России
+      </span>
     </div>
 
-    <h1 class="header__title header__title--hero">Милые штуки <br />ручной<br />работы для дома</h1>
+    <div class="header__hero-image">
+      <h1 class="header__title header__title--hero">Милые штуки <br />ручной<br />работы для дома</h1>
 
-    <ul class="header__categories categories">
-      <li class="categories__item">
-        <a href="#">Предметы интерьера</a>
-      </li>
-      <li class="categories__item categories__item--dark">
-        <a href="#">Детские игрушки</a>
-      </li>
-    </ul>
+      <ul class="header__categories categories">
+        <li class="categories__item">
+          <a href="#">Предметы интерьера</a>
+        </li>
+        <li class="categories__item categories__item--dark">
+          <a href="#">Детские игрушки</a>
+        </li>
+      </ul>
+    </div>
+
+
   </header>
 
   <main class="main">
